--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.6.13",
     "expo": "~54.0.31",
     "expo-camera": "~17.0.10",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-linking": "~8.0.11",
     "expo-sharing": "~14.0.8",
