--- a/app.json
+++ b/app.json
@@ -31,6 +31,11 @@
     },
     "plugins": [
       "expo-sqlite"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "16524052-1018-47da-bfef-221517d583ed"
+      }
+    }
   }
 }
