--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "FuelCore CRM",
+    "name": "FuelCore",
     "slug": "fuelcore-crm",
     "version": "1.0.0",
     "orientation": "portrait",
